tests/valid/RealConst_Valid_1.whiley


public export method test() -> void:
    real x = 12376523476123.98712345
    x = x + 0.002348976
    assume x == 12376523476123.989472426

