tests/invalid/LogicalNot_Invalid_1.whiley
public export method test():
    assume !1 < 1